[package]
name = "totalfb"
version = "0.1.0"
edition = "2024"
authors = ["Matteo Bosshard matteobosshard@gmail.com"]
license = "MIT"
repository = "https://github.com/HardBoss07/totalfb"
description = "Everything you need making frame buffer applications"

include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*",
]

[lib]
name = "totalfb"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
minifb = "0.28.0"
